# evolving-memory

./: .env.example  README.md  pyproject.toml
demos/: beeai_adapter.py  beeai_benchmark.py  beeai_distillation.py  fourier_memory.py  isa_lifecycle.py  mock_tools.py  recursive_image_analysis.py
examples/: basic_usage.py
scripts/: export_training_data.py  prepare_sft_dataset.py
src/evolving_memory/: __init__.py  config.py
src/evolving_memory/capture/: session.py  trace_logger.py
src/evolving_memory/dream/: __init__.py  chunker.py  compactor.py  connector.py  curator.py  domain_adapter.py  engine.py  migration.py  prompt_builder.py
src/evolving_memory/dream/adapters/: __init__.py  default_adapter.py  robotics_adapter.py
src/evolving_memory/embeddings/: encoder.py
src/evolving_memory/isa/: __init__.py  opcodes.py  parser.py  serializer.py
src/evolving_memory/llm/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py  prompts.py  types.py
src/evolving_memory/models/: __init__.py  fidelity.py  graph.py  hierarchy.py  query.py  strategy.py  trace.py
src/evolving_memory/router/: __init__.py  anomaly.py  cognitive_router.py
src/evolving_memory/server/: __init__.py  __main__.py  app.py  cli.py  routes.py
src/evolving_memory/storage/: __init__.py  migrations.py  sqlite_store.py  vector_index.py
src/evolving_memory/vm/: __init__.py  context.py  handlers.py  machine.py
tests/: conftest.py  test_cognitive_router.py  test_domain_adapter.py  test_dream_engine.py  test_fidelity.py  test_integration.py  test_isa.py  test_models.py  test_real_hypothesis.py  test_schema_migration.py  test_server.py  test_storage.py  test_trace_capture.py  test_vm.py
